# Text_Query

./: CMakeLists.txt  README.md  main.cpp  main.py
.cache/clangd/index/: QueryResult.cpp.A7B8B36E9312BE4C.idx  QueryResult.h.6F8B5C5094739E35.idx  TextQuery.cpp.CBC1F25101A929C5.idx  TextQuery.h.746704191D22772F.idx  main.cpp.023B5E0494238A4A.idx  main.cpp.71694346EFFED532.idx  runQueries.cpp.73399D382221B527.idx  runQueries.h.2D164A633E6111FD.idx
include/: QueryResult.h  TextQuery.h  runQueries.h
src/: CMakeLists.txt  QueryResult.cpp  TextQuery.cpp  main.cpp  runQueries.cpp
test/: example.txt
